@@ -12,7 +12,7 @@ Includes jlink and shade plugins and resources for creating native windows insta
 
 ### 1. Clone or download the repository
 ```
-$ git clone https://github.com/Aleksey2096/javafx-jlink-jpackage-modular_template.git
+$ git clone https://github.com/Aleksey2096/javafx-player.git
 ```
 
 ### 2. Run application
@@ -31,20 +31,21 @@ $ mvn install
 ```
 $ jpackage 
 	-t exe 
-	--name 'FX Player' 
+	--name "FX Player" 
 	--app-version 1.0 
 	--input jpackage/input 
 	--main-jar fxplayer-0.0.1-SNAPSHOT-shaded.jar 
 	--dest jpackage/output_installer 
 	--icon jpackage/icon/player.ico 
-	--module-path D:\Games\Java\javafx-jmods-23 
+	--module-path D:/Games/Java/javafx-jmods-23 
 	--add-modules javafx.controls,javafx.graphics,javafx.fxml,javafx.base 
 	--win-shortcut
+$ jpackage -t exe --name "FX Player" --app-version 1.0 --input jpackage/input --main-jar fxplayer-0.0.1-SNAPSHOT-shaded.jar --dest jpackage/output_installer --icon jpackage/icon/player.ico --module-path D:/Games/Java/javafx-jmods-23 --add-modules javafx.controls,javafx.graphics,javafx.fxml,javafx.base --win-shortcut
 ```
 
 ***
 
-### 3+. Create custom runtime image (including .bat launcher) using javafx-maven-plugin. Launcher path = "target\hellofx\bin\launcher.bat"
+### 3+. Create custom runtime image (including .bat launcher) using javafx-maven-plugin. Launcher path = "target\fxplayer\bin\fxplayer-launcher.bat"
 ```
 $ mvn clean javafx:jlink
 ```
